--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superstring",
-  "version": "2.4.4",
+  "version": "3.0.0",
   "description": "A data structure to efficiently represent the results of applying patches.",
   "main": "./index",
   "browser": "./browser",
@@ -31,15 +31,15 @@
   },
   "homepage": "https://github.com/atom/superstring",
   "dependencies": {
-    "nan": "^2.14.2"
+    "nan": "^2.17.0"
   },
   "devDependencies": {
-    "chai": "^2.0.0",
-    "mocha": "^2.3.4",
-    "random-seed": "^0.2.0",
-    "standard": "^4.5.4",
-    "temp": "^0.8.3",
-    "unzip": "^0.1.11"
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "random-seed": "^0.3.0",
+    "standard": "^17.0.0",
+    "temp": "^0.9.4",
+    "unzipper": "^0.10.11"
   },
   "standard": {
     "global": [
