--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
+    "eslint": "^8.28.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.1.0",
     "random-seed": "^0.3.0",
     "standard": "^17.0.0",
